# codecrafters-bittorrent-python

./: README.md  pyproject.toml
app/: arnab.py  main.py
