[tool.poetry]
name = "codecrafters-bittorrent-python"
version = "0.1.0"
description = ""
authors = ["Jonathan Ross <jwross24@vt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"bencode.py" = "4.0.0"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
